--- a/comment_form.html
+++ b/comment_form.html
@@ -10,4 +10,9 @@
         {{ form.content.label }} {{ form.content }}
         <input type="submit" value="Submit">
     </form>
+    <form action="//meal_plan/new" method="get">
+        <input type="submit" value="Make A Meal Plan!">
+    </form>
+    <form action="/logout">
+        <input type="submit" value="Logout">
 {% endblock %}
