--- a/meal_plan.html
+++ b/meal_plan.html
@@ -8,4 +8,9 @@
     <form method="POST" action="/meal_plan/{{int:meal_plan_id}}/delete">
         <input type="submit" value="Delete">
     </form>
+    <form action="//meal_plan/new" method="get">
+        <input type="submit" value="Make A Meal Plan!">
+    </form>
+    <form action="/logout">
+        <input type="submit" value="Logout">
 {% endblock %}
