--- a/show_comment.html
+++ b/show_comment.html
@@ -9,3 +9,9 @@
             <input type="submit" value="Delete">
         </form>
     </div>
+    <form action="//meal_plan/new" method="get">
+        <input type="submit" value="Make A Meal Plan!">
+    </form>
+    <form action="/logout">
+        <input type="submit" value="Logout">
+{% endblock %}
