--- a/comments.html
+++ b/comments.html
@@ -10,4 +10,12 @@
                 <input type="submit" value="Delete">
             </form>
         </div>
+        <form action="/meal_plan/new" method="get">
+            <input type="submit" value="Make A Meal Plan!">
+        </form>
+        <form action="/comments/new">
+            <input type="submit" value="Comment">
+        </form>
+        <form action="/logout">
+            <input type="submit" value="Logout">
     {% endfor %}
