--- a/meal_plan_form.html
+++ b/meal_plan_form.html
@@ -28,5 +28,7 @@
         <input type="submit" value="Create Meal Plan">
     {% endfor %}
     </form>
+    <form action="/logout">
+        <input type="submit" value="Logout">
 </body>
 </html>
