--- a/base.html
+++ b/base.html
@@ -6,7 +6,7 @@
     <title>Meal Planner</title>
 </head>
 <body>
-    <h1>%{ block title %}{% endblock %}</h1>
+    <h1>{% block title %}{% endblock %}</h1>
     {% block content %}
     {% endblock %}
 </body>
