--- a/comment_form.html
+++ b/comment_form.html
@@ -10,7 +10,7 @@
         {{ form.content.label }} {{ form.content }}
         <input type="submit" value="Submit">
     </form>
-    <form action="//meal_plan/new" method="get">
+    <form action="//meal_plans/new" method="get">
         <input type="submit" value="Make A Meal Plan!">
     </form>
     <form action="/logout">
