--- a/login.html
+++ b/login.html
@@ -2,10 +2,8 @@
 
 {% block title %} Login! {% endblock %}
 {% block content %}
-    <form action="/meal_plan" method="POST">
-        {{% form.hidden_tag() %}}
-        {% for field in form 
-            if field.widget.input_type != 'hidden' %}
+    <form action="/meal_plans" method="POST">
+        {{ form.hidden_tag() }}
         <div>
             {{ form.username.label }}
             {{ form.username(size=32) }}
@@ -23,6 +21,5 @@
         <div>
             <input type="submit" value="Login">
         </div>
-        {% endfor %}
     </form>
 {% endblock %}
