--- a/show_comment.html
+++ b/show_comment.html
@@ -9,7 +9,7 @@
             <input type="submit" value="Delete">
         </form>
     </div>
-    <form action="//meal_plan/new" method="get">
+    <form action="//meal_plans/new" method="get">
         <input type="submit" value="Make A Meal Plan!">
     </form>
     <form action="/logout">
