--- a/users..html
+++ b/users..html
@@ -7,7 +7,7 @@
             <a href="/user/{{user.id}}"><li>{{ user.username }}</li>=""></a>
         {% endfor %}
     </ul>
-    <form action="//meal_plan/new" method="get">
+    <form action="//meal_plans/new" method="get">
         <input type="submit" value="Make A Meal Plan!">
     </form>
     <form action="/logout">
