--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     {{ form.hidden_tag() }}
             <input type="submit" value="Login">        
 </form>
-<form action="/meal_plans" method="POST">
+<form action="/register" method="POST">
     {{ form.hidden_tag() }}
     <div>
         {{ form.username.label }}
