--- a/user.html
+++ b/user.html
@@ -8,14 +8,14 @@
     <ul>
         {% for plan in meal_plans %}
             <a href="/meal_plans/{{meal_plan_id}}"><li>
-                User ID: {{ plan.user_id }} - Meal ID: {{ plan.meal_id }} - Diet: {{ plan.diet_name }}
+                User ID: {{ plan.user_id }} - Meal ID: {{ plan.meal_id }} - Diet: {{ plan.diet}}
             </li></a>
             <form method="POST" action="/meal_plans/{{int:meal_plan_id}}/delete">
                 <input type="submit" value="Delete">
             </form>
         {% endfor %}
     </ul>
-    <form action="//meal_plans/new" method="get">
+    <form action="/meal_plans/new" method="get">
         <input type="submit" value="Make A Meal Plan!">
     </form>
     <form action="/logout">
